Fix vertical alignment of icons in fab-buttons

--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -670,6 +670,15 @@ ion-fab{
   }
 }
 
+/* These two rules fix the vertical alignment of icons in fab-buttons. */
+.fab[mini],
+.fab-list-active .fab {
+  line-height: 1;
+}
+.fab[mini] .fab-close-icon {
+  line-height: 1.75;
+}
+
 .item-block{
   min-height: 2.2rem;
 }
